<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/value_input"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value" />

    <RadioGroup
        android:id="@+id/converter_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_text">

        <RadioButton
            android:id="@+id/option_km_to_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometer_to_meter" />

        <RadioButton
            android:id="@+id/option_minute_to_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_to_second" />

        <RadioButton
            android:id="@+id/option_pound_to_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound_to_kilogram" />

    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/converter_options"
        android:text="@string/round_up_result"
        app:layout_constraintStart_toStartOf="@id/converter_options"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Result is: 0"
        android:textColor="#2D3D97"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>